[project]
name = "wonk"
version = "0.7.1"
description = "Wonk is a tool for combining a set of AWS policy files into smaller compiled policy sets."
license = "Apache-2.0"
authors = [{ name = "Kirk Strauser", email = "kirk@strauser.com" }]
readme = "README.rst"
homepage = "https://github.com/aminohealth/wonk"
repository = "https://github.com/aminohealth/wonk.git"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "boto3>=1.17",
  "ortools>=9.3",
  "pydantic>=1.8",
  "pyyaml>=5.0",
  "toposort>=1.6",
  "xdg>=5.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "docutils>=0.21.2",
  "flake8>=7.2.0",
  "mypy>=1.15.0",
  "pylint>=3.3.7",
  "pytest>=8.3.5",
  "pytest-mock>=3.14.0",
  "rstcheck>=6.2.4",
]

[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
wonk = "wonk.cli:handle_command_line"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
files = "**/*.py"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
